--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
@@ -18,6 +19,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.5.3",
+    "jest": "^26.0.1",
     "moment": "^2.26.0",
     "node-sass": "^4.14.0",
     "normalize.css": "^8.0.1",
