--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.5.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^26.0.1",
     "moment": "^2.26.0",
     "node-sass": "^4.14.0",
     "normalize.css": "^8.0.1",
+    "raf": "^3.4.1",
     "react": "^16.13.1",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.8.0",
