--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.0.1",
+    "live-server": "^1.2.1",
     "moment": "^2.26.0",
     "node-sass": "^4.14.0",
     "normalize.css": "^8.0.1",
