--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^26.0.1",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.26.0",
     "node-sass": "^4.14.0",
     "normalize.css": "^8.0.1",
