--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "KamajiiSC <brandonlschaen@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -22,13 +21,8 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.5.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^26.0.1",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.26.0",
     "node-sass": "^4.14.0",
@@ -41,14 +35,20 @@
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.0",
     "uuid": "^8.0.0",
     "validator": "^13.0.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.0.1",
+    "react-test-renderer": "^16.13.1",
     "webpack-dev-server": "^3.10.3"
   }
 }
